# gpt-from-scratch-arena1.1

./: .pre-commit-config.yaml  README.md  custom_transformer.py  main.py  pyproject.toml  test_gradients.py  tests.py  training.py  visualizers.py
part1_transformer_from_scratch/: solutions.py
