[project]
name = "chapter1-transformer-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "ipython>=9.14.0",
    "jaxtyping>=0.3.10",
    "numpy>=2.4.6",
    "torchvision>=0.27.0",
    "transformer-lens>=3.3.0",
]
