[project]
name = "chapter1-transformer-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "ipython>=9.14.0",
    "jaxtyping>=0.3.10",
    "numpy>=2.4.6",
    "torchvision>=0.27.0",
    "transformer-lens>=3.3.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "types-tqdm>=4.67.3.20260518",
]


[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["F401"]  # Ignore unused imports globally

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false
no_implicit_reexport = false
warn_redundant_casts = false
warn_unused_ignores = true
exclude = ["part1_transformer_from_scratch"]
ignore_errors = true
ignore_missing_imports = true
